--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									</a></h2>
 									<p>In this project we utilize Excel's data cleaning and visualization tools to analyze bike consumers in the market</p>
 								</header>
-								<a href="https://1drv.ms/x/s!AkNV_mO8_xpRghhHMjrxIxf9sfOM?e=BOe4do" class="image main"><img src="images/bikes.jpg" alt="" /></a>
+								<a href="https://1drv.ms/x/s!AkNV_mO8_xpRghhHMjrxIxf9sfOM?e=BOe4do" class="image main"><img src="images/coolerbike.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://1drv.ms/x/s!AkNV_mO8_xpRghhHMjrxIxf9sfOM?e=BOe4do" class="button large">View Project</a></li>
 								</ul>
